Fix height and width for login form to prevent text overflow from errors (#1041)

--- a/frontend/src/pages/Login/Login.module.scss
+++ b/frontend/src/pages/Login/Login.module.scss
@@ -7,11 +7,8 @@
 }
 
 .loginPage {
-    align-items: center;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    max-width: 90vw;
+    min-height: 462px;
+    width: 450px;
 }
 
 .loginTitle {
@@ -30,6 +27,7 @@
     display: flex;
     flex-direction: column;
     padding: 30px;
+    transition: all 0.2s ease-in-out;
 }
 
 .loginForm {
